Add HubSpot CMS repeaters and fix navigation links
- Add repeater functionality to index.html (benefits, video previews)
- Add repeater functionality to about.html (info cards)
- Add repeater functionality to videos.html (video library)
- Add repeater functionality to resources.html (all resource sections)
- Add repeater functionality to contact.html (contact cards, support options)
- Add repeater functionality to es/resources.html
- Add homepage links to all footer logos
- Create .github/copilot-instructions.md for project guidelines

--- a/es/index.html
+++ b/es/index.html
@@ -249,7 +249,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <img src="../images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    <a href="index.html">
+                        <img src="../images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    </a>
                     <p>Programa Educativo Alternativo sobre el Vapeo Juvenil</p>
                 </div>
                 <div class="footer-column">
