--- a/about.html
+++ b/about.html
@@ -82,39 +82,17 @@
             </div>
 
             <div class="info-cards-grid">
-                <div class="info-card pink-accent">
+                {% for item in module.info_cards %}
+                <div class="info-card{% if item.use_pink_accent %} pink-accent{% endif %}">
                     <div class="info-card-icon">
                         <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                            <circle cx="9" cy="7" r="4"></circle>
-                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                            {{ item.icon_svg|safe }}
                         </svg>
                     </div>
-                    <h3>Who We Are</h3>
-                    <p>The coaches are here to help. They have years of experience with talking with people who vape and lots of enthusiasm for working with teens.</p>
+                    <h3>{{ item.card_title }}</h3>
+                    <p>{{ item.card_description }}</p>
                 </div>
-
-                <div class="info-card">
-                    <div class="info-card-icon">
-                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="12" cy="12" r="10"></circle>
-                            <path d="M12 6v6l4 2"></path>
-                        </svg>
-                    </div>
-                    <h3>Our Mission</h3>
-                    <p>Educate students about nicotine and marijuana use, support a decrease in recidivism and suspension rates, build a positive bond between Kick It California and students, and provide resources for students who want to reduce or quit nicotine and marijuana use.</p>
-                </div>
-
-                <div class="info-card">
-                    <div class="info-card-icon">
-                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"></path>
-                        </svg>
-                    </div>
-                    <h3>Our Values</h3>
-                    <p>Commitment to student well-being, respect, trust, empowerment, education, empathy, communication, and inclusivity.</p>
-                </div>
+                {% endfor %}
             </div>
 
             <div class="content-block">
@@ -185,7 +163,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    <a href="index.html">
+                        <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    </a>
                     <p>Youth Vaping Alternative Program Education</p>
                 </div>
                 <div class="footer-column">
