--- a/contact.html
+++ b/contact.html
@@ -50,39 +50,18 @@
         <div class="container">
             <div class="contact-grid">
                 <div class="contact-info">
-                    <div class="contact-card pink-accent">
+                    {% for item in module.contact_cards %}
+                    <div class="contact-card{% if item.use_pink_accent %} pink-accent{% endif %}{% if item.use_pink_gradient %} pink-gradient-bg{% endif %}">
                         <div class="contact-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                                <polyline points="22,6 12,13 2,6"></polyline>
+                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="{% if item.use_pink_gradient %}white{% else %}currentColor{% endif %}" stroke-width="2">
+                                {{ item.icon_svg|safe }}
                             </svg>
                         </div>
-                        <h3>Email Support</h3>
-                        <p>Do you need help with YVAPE?</p>
-                        <a href="mailto:yvape-support@health.ucsd.edu" class="contact-link">yvape-support@health.ucsd.edu</a>
+                        <h3{% if item.use_pink_gradient %} style="color: white;"{% endif %}>{{ item.card_title }}</h3>
+                        <p{% if item.use_pink_gradient %} style="color: rgba(255,255,255,0.95);"{% endif %}>{{ item.card_description }}</p>
+                        <a href="{{ item.contact_link }}" class="contact-link"{% if item.use_pink_gradient %} style="color: white; border-color: white;"{% endif %}>{{ item.contact_display }}</a>
                     </div>
-
-                    <div class="contact-card">
-                        <div class="contact-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
-                            </svg>
-                        </div>
-                        <h3>Phone Support</h3>
-                        <p>Call us for questions about YVAPE</p>
-                        <a href="tel:1-858-300-1023" class="contact-link">1-858-300-1023</a>
-                    </div>
-
-                    <div class="contact-card pink-gradient-bg">
-                        <div class="contact-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-                                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-                            </svg>
-                        </div>
-                        <h3 style="color: white;">Talk to a YVAPE Coach</h3>
-                        <p style="color: rgba(255,255,255,0.95);">English & Spanish Support</p>
-                        <a href="tel:1-888-525-0122" class="contact-link" style="color: white; border-color: white;">1-888-525-0122</a>
-                    </div>
+                    {% endfor %}
                 </div>
 
                 <div class="coach-availability">
@@ -129,18 +108,14 @@
                     <div class="additional-support">
                         <h3>Additional Ways to Get Help</h3>
                         <div class="support-options">
-                            <a href="https://helpline-vision.ucsd.edu/chat" target="_blank" class="support-option">
+                            {% for item in module.support_options %}
+                            <a href="{{ item.link_url }}" target="_blank" class="support-option">
                                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                                    {{ item.icon_svg|safe }}
                                 </svg>
-                                <span>Live Chat</span>
+                                <span>{{ item.option_text }}</span>
                             </a>
-                            <a href="sms:66819;?&body=NoVapes" class="support-option">
-                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
-                                </svg>
-                                <span>Text NoVapes to 66819</span>
-                            </a>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -158,7 +133,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    <a href="index.html">
+                        <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    </a>
                     <p>Youth Vaping Alternative Program Education</p>
                 </div>
                 <div class="footer-column">
