--- a/resources.html
+++ b/resources.html
@@ -81,141 +81,62 @@
 
                 <h3 class="section-title">How YVAPE Helps</h3>
                 <div class="resources-grid">
-                    <a href="https://yvape.org/static/media/resources/YVAPEFlyer_09302025.pdf" target="_blank" class="resource-card">
+                    {% for item in module.yvape_resources %}
+                    <a href="{{ item.resource_url }}" target="_blank" class="resource-card">
                         <div class="resource-icon">
                             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
                                 <polyline points="14 2 14 8 20 8"></polyline>
                             </svg>
                         </div>
-                        <h4>YVAPE Flyer</h4>
-                        <p>Information sheet about the YVAPE program</p>
+                        <h4>{{ item.resource_title }}</h4>
+                        <p>{{ item.resource_description }}</p>
                     </a>
-
-                    <a href="https://yvape.org/static/media/resources/YVAPEBrochure_09302025.pdf" target="_blank" class="resource-card">
-                        <div class="resource-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
-                                <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
-                            </svg>
-                        </div>
-                        <h4>YVAPE Brochure</h4>
-                        <p>Comprehensive program brochure</p>
-                    </a>
+                    {% endfor %}
                 </div>
 
                 <h3 class="section-title">Vaping & Nicotine Resources</h3>
                 <div class="resources-grid">
-                    <a href="https://yvape.org/static/media/resources/KIC%20Text-Vape-Posters%20Eng.pdf" target="_blank" class="resource-card">
-                        <div class="resource-icon pink">
+                    {% for item in module.vaping_nicotine_resources %}
+                    <a href="{{ item.resource_url }}" target="_blank" class="resource-card">
+                        <div class="resource-icon{% if item.use_pink_icon %} pink{% endif %}">
                             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                                <circle cx="8.5" cy="8.5" r="1.5"></circle>
-                                <polyline points="21 15 16 10 5 21"></polyline>
+                                {{ item.icon_svg|safe }}
                             </svg>
                         </div>
-                        <h4>Text to Quit Vaping Poster</h4>
-                        <p>Promotional poster for text support</p>
+                        <h4>{{ item.resource_title }}</h4>
+                        <p>{{ item.resource_description }}</p>
                     </a>
-
-                    <a href="https://yvape.org/static/media/resources/Health_Risks_of_Vaping_for_Kids.pdf" target="_blank" class="resource-card">
-                        <div class="resource-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-                            </svg>
-                        </div>
-                        <h4>Health Risks of Vaping for Kids</h4>
-                        <p>Medical information about vaping dangers</p>
-                    </a>
-
-                    <a href="https://yvape.org/static/media/resources/How_to_Talk_with_Your_Kids_About_Vaping_2021_KIC_FINAL.pdf" target="_blank" class="resource-card">
-                        <div class="resource-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-                            </svg>
-                        </div>
-                        <h4>How to Talk with Your Kids About Vaping</h4>
-                        <p>Parent guide for conversations</p>
-                    </a>
-
-                    <a href="https://yvape.org/static/media/resources/English_Vape_MyPlan_KickItCA.pdf" target="_blank" class="resource-card">
-                        <div class="resource-icon pink">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                                <polyline points="14 2 14 8 20 8"></polyline>
-                                <line x1="9" y1="15" x2="15" y2="15"></line>
-                            </svg>
-                        </div>
-                        <h4>My Quit Plan</h4>
-                        <p>Personal quit vaping worksheet</p>
-                    </a>
-
-                    <a href="https://yvape.org/static/media/resources/NW_QE31_5_tips_to_help_quit_vaping_2021_KIC.pdf" target="_blank" class="resource-card">
-                        <div class="resource-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <polyline points="9 11 12 14 22 4"></polyline>
-                                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
-                            </svg>
-                        </div>
-                        <h4>5 Tips to Help Quit Vaping</h4>
-                        <p>Quick tips for quitting</p>
-                    </a>
+                    {% endfor %}
                 </div>
 
                 <h3 class="section-title">Marijuana Resources</h3>
                 <div class="resources-grid">
-                    <a href="https://kickitca.org/marijuana" target="_blank" class="resource-card">
-                        <div class="resource-icon pink">
+                    {% for item in module.marijuana_resources %}
+                    <a href="{{ item.resource_url }}" target="_blank" class="resource-card">
+                        <div class="resource-icon{% if item.use_pink_icon %} pink{% endif %}">
                             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <line x1="12" y1="8" x2="12" y2="12"></line>
-                                <line x1="12" y1="16" x2="12.01" y2="16"></line>
+                                {{ item.icon_svg|safe }}
                             </svg>
                         </div>
-                        <h4>Marijuana Information</h4>
-                        <p>Comprehensive marijuana resources</p>
+                        <h4>{{ item.resource_title }}</h4>
+                        <p>{{ item.resource_description }}</p>
                     </a>
-
-                    <a href="https://yvape.org/static/media/resources/Secondhand_Marijuana_Smoke_and_Kids_2021_KIC.pdf" target="_blank" class="resource-card">
-                        <div class="resource-icon">
-                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-                                <circle cx="9" cy="7" r="4"></circle>
-                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                            </svg>
-                        </div>
-                        <h4>Secondhand Marijuana Smoke and Kids</h4>
-                        <p>Protecting children from exposure</p>
-                    </a>
+                    {% endfor %}
                 </div>
 
                 <h3 class="section-title">External Nicotine Resources</h3>
                 <div class="external-resources">
-                    <a href="https://digitalmedia.hhs.gov/tobacco" target="_blank" class="external-link">
+                    {% for item in module.external_resources %}
+                    <a href="{{ item.resource_url }}" target="_blank" class="external-link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                             <polyline points="15 3 21 3 21 9"></polyline>
                             <line x1="10" y1="14" x2="21" y2="3"></line>
                         </svg>
-                        <span>HHS Digital Media - Tobacco Resources</span>
+                        <span>{{ item.link_text }}</span>
                     </a>
-                    <a href="https://www.cdc.gov/tobacco/basic_information/e-cigarettes/index.htm" target="_blank" class="external-link">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                            <polyline points="15 3 21 3 21 9"></polyline>
-                            <line x1="10" y1="14" x2="21" y2="3"></line>
-                        </svg>
-                        <span>CDC - E-Cigarette Information</span>
-                    </a>
-                    <a href="https://e-cigarettes.surgeongeneral.gov/" target="_blank" class="external-link">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                            <polyline points="15 3 21 3 21 9"></polyline>
-                            <line x1="10" y1="14" x2="21" y2="3"></line>
-                        </svg>
-                        <span>Surgeon General - E-Cigarette Resources</span>
-                    </a>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -225,7 +146,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    <a href="index.html">
+                        <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    </a>
                     <p>Youth Vaping Alternative Program Education</p>
                 </div>
                 <div class="footer-column">
