--- a/videos.html
+++ b/videos.html
@@ -76,126 +76,18 @@
     <section class="videos-library" id="videosLibrary">
         <div class="container">
             <div class="videos-grid-full">
-                <div class="video-card-full" data-video-id="p246p6i35l" data-title="Top 6 Tips to Quit Nicotine Vapes" data-description="Practical strategies and advice to help you quit vaping nicotine successfully.">
+                {% for item in module.video_library %}
+                <div class="video-card-full" data-video-id="{{ item.video_id }}" data-title="{{ item.video_title }}" data-description="{{ item.video_description }}">
                     <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/d820f3beef37fc07588404b48a9a09df.jpg?image_crop_resized=960x540" alt="Top 6 Tips to Quit Nicotine Vapes">
+                        <img src="{{ item.thumbnail_url }}" alt="{{ item.video_title }}">
                         <div class="play-icon">▶</div>
                     </div>
                     <div class="video-info">
-                        <h3>Top 6 Tips to Quit Nicotine Vapes</h3>
-                        <p>Practical strategies and advice to help you quit vaping nicotine successfully.</p>
+                        <h3>{{ item.video_title }}</h3>
+                        <p>{{ item.video_description }}</p>
                     </div>
                 </div>
-
-                <div class="video-card-full" data-video-id="p6t85drsro" data-title="Vaping Marijuana" data-description="Understanding the risks and effects of vaping marijuana.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/478f3057e46e0085e4f6a758045a1cd23747a1fe.jpg?image_crop_resized=960x540" alt="Vaping Marijuana">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Vaping Marijuana</h3>
-                        <p>Understanding the risks and effects of vaping marijuana.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="tpe7y7zflx" data-title="Personal Responsibility" data-description="Learn about making responsible choices and taking ownership of your decisions.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/72ea12f2a72ef61fa996d301eb882630ed0bb2d2.jpg?image_crop_resized=960x540" alt="Personal Responsibility">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Personal Responsibility</h3>
-                        <p>Learn about making responsible choices and taking ownership of your decisions.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="l71fzsmxp4" data-title="Dealing with Stress" data-description="Healthy ways to manage stress without relying on substances.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/fd7f68f6128a6f6d9192138517a12c6a9b271602.jpg?image_crop_resized=960x540" alt="Dealing with Stress">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Dealing with Stress</h3>
-                        <p>Healthy ways to manage stress without relying on substances.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="ct2feaq8uw" data-title="Marijuana and Mental Health" data-description="How marijuana use affects your mental health and wellbeing.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/7672839162ad097905d3efc40a9d5275.jpg?image_crop_resized=960x540" alt="Marijuana and Mental Health">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Marijuana and Mental Health</h3>
-                        <p>How marijuana use affects your mental health and wellbeing.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="ttt7k54gsj" data-title="Nicotine and Mental Health" data-description="Understanding the connection between nicotine use and mental health.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/f6679855f4d4f57c1d5c06f7e2ac7f271ec5767a.jpg?image_crop_resized=960x540" alt="Nicotine and Mental Health">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Nicotine and Mental Health</h3>
-                        <p>Understanding the connection between nicotine use and mental health.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="ip3zsyxct4" data-title="Understanding Motivation" data-description="Discover what motivates you and how to harness that power for positive change.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/1cf481eed26bc3405a0c502763e6b147670f465d.jpg?image_crop_resized=960x540" alt="Understanding Motivation">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Understanding Motivation</h3>
-                        <p>Discover what motivates you and how to harness that power for positive change.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="cakglb4vfs" data-title="Health Effects of Vaping" data-description="Learn about the short and long-term health effects of vaping.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/fd97bb92f55e8006ef826b390a57c600bab0e9be.jpg?image_crop_resized=960x540" alt="Health Effects of Vaping">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Health Effects of Vaping</h3>
-                        <p>Learn about the short and long-term health effects of vaping.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="pob4w82dre" data-title="Marketing Manipulation" data-description="How vaping companies target and manipulate young people through marketing.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/c36eebc9e16f6f7682a34f2f2d26ef080ae64f72.jpg?image_crop_resized=960x540" alt="Marketing Manipulation">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Marketing Manipulation</h3>
-                        <p>How vaping companies target and manipulate young people through marketing.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="03q4n9jzy5" data-title="Asking for Help Quitting" data-description="It's okay to ask for help. Learn about resources available to support you.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/3631121d111876488b700fc1042bf6c6b9c77a77.jpg?image_crop_resized=960x540" alt="Asking for Help Quitting">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Asking for Help Quitting</h3>
-                        <p>It's okay to ask for help. Learn about resources available to support you.</p>
-                    </div>
-                </div>
-
-                <div class="video-card-full" data-video-id="m0eyx7d5wj" data-title="Vaping Marijuana: Your Brain & Lungs" data-description="The science behind how marijuana vaping affects your brain and respiratory system.">
-                    <div class="video-thumbnail-full">
-                        <img src="https://embed-ssl.wistia.com/deliveries/59da73759a7686cf8d5cb9ad9c4a510da6b2e64b.jpg?image_crop_resized=960x540" alt="Vaping Marijuana: Your Brain & Lungs">
-                        <div class="play-icon">▶</div>
-                    </div>
-                    <div class="video-info">
-                        <h3>Vaping Marijuana: Your Brain & Lungs</h3>
-                        <p>The science behind how marijuana vaping affects your brain and respiratory system.</p>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </section>
@@ -335,7 +227,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    <a href="index.html">
+                        <img src="images/yvape_logo.png" alt="YVAPE Logo" class="footer-logo">
+                    </a>
                     <p>Youth Vaping Alternative Program Education</p>
                 </div>
                 <div class="footer-column">
